--- a/src/main/resources/CreatorView.fxml
+++ b/src/main/resources/CreatorView.fxml
@@ -1,30 +1,35 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.Cursor?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.DatePicker?>
-<?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.Menu?>
-<?import javafx.scene.control.MenuBar?>
-<?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
 
-<BorderPane prefHeight="621.0" prefWidth="856.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane prefHeight="621.0" prefWidth="856.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1">
     <padding>
         <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
     </padding>
 
     <center>
         <VBox fx:id="center" alignment="CENTER" prefHeight="170.0" prefWidth="369.0" spacing="10">
-         <DatePicker fx:id="enterDate"/>
-         <TextField fx:id="enterNom" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" promptText="Nom" style="-fx-border-color: Orange;" />
-         <TextField fx:id="enterChambre" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" promptText="Chambre" style="-fx-border-color: Orange;" />
-         <TextField fx:id="enterType" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" promptText="Type" style="-fx-border-color: Orange;" />
-            <TextField fx:id="enterTaille" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" promptText="Taille" style="-fx-border-color: Orange;" />
+         <ImageView fx:id="avatar" fitHeight="97.0" fitWidth="128.0" focusTraversable="true" nodeOrientation="INHERIT" onMouseClicked="#onClicAvatar" pickOnBounds="true" preserveRatio="true">
+            <image>
+               <Image url="@avatar.png" />
+            </image></ImageView>
+         <DatePicker fx:id="enterDate" />
+         <HBox fx:id="hboxNomChambre" alignment="CENTER" prefHeight="30.0" prefWidth="629.0">
+            <children>
+               <TextField fx:id="enterNom" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" promptText="Nom" style="-fx-border-color: Orange;" />
+               <TextField fx:id="enterChambre" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" promptText="Chambre" style="-fx-border-color: Orange;" />
+            </children>
+         </HBox>
+         <HBox fx:id="hboxTailleType" alignment="CENTER" prefHeight="31.0" prefWidth="629.0">
+            <children>
+                  <TextField fx:id="enterTaille" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" promptText="Taille" style="-fx-border-color: Orange;" />
+               <TextField fx:id="enterType" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" promptText="Type" style="-fx-border-color: Orange;" />
+            </children>
+         </HBox>
          <TextField fx:id="enterEntre" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" promptText="Entrée" />
          <HBox fx:id="centerPlat" alignment="CENTER" prefHeight="32.0" prefWidth="629.0">
             <children>
@@ -34,9 +39,14 @@
             </children>
          </HBox>
          <TextField fx:id="enterLaitage" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" promptText="Laitage" />
-         <TextField fx:id="enterDessert" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" promptText="Dessert" />
+         <HBox fx:id="hboxDessertCafe" alignment="CENTER" prefHeight="25.0" prefWidth="629.0">
+            <children>
+               <TextField fx:id="enterDessert" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" promptText="Dessert" />
+               <TextField fx:id="enterCafe" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" promptText="Café" />
+            </children>
+         </HBox>
          <TextField fx:id="enterComment" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" promptText="Comment" />
-            <Button onAction="#addToListView" text="OK" />
+            <Button onAction="#addToListView" text="Ajouter" />
         </VBox>
     </center>
    <cursor>
@@ -47,7 +57,7 @@
         <menus>
           <Menu mnemonicParsing="false" text="File">
             <items>
-              <MenuItem mnemonicParsing="false" text="Close" />
+              <MenuItem fx:id="toPDF" mnemonicParsing="false" onAction="#toPDF" text="PDF" />
             </items>
           </Menu>
           <Menu mnemonicParsing="false" text="Edit">
