--- a/src/main/resources/CreatorView.fxml
+++ b/src/main/resources/CreatorView.fxml
@@ -1,32 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.Cursor?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.DatePicker?>
-<?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.Menu?>
-<?import javafx.scene.control.MenuBar?>
-<?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<BorderPane maxHeight="1080.0" maxWidth="1920.0" minHeight="480.0" minWidth="720.0" prefHeight="777.0" prefWidth="1320.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="1080.0" maxWidth="1920.0" minHeight="480.0" minWidth="720.0" prefHeight="777.0" prefWidth="1320.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1">
     <padding>
         <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
     </padding>
 
     <center>
-      <GridPane alignment="CENTER" BorderPane.alignment="CENTER">
+      <GridPane fx:id="gridpane" alignment="CENTER" BorderPane.alignment="CENTER">
          <columnConstraints>
             <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" />
              <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" />
@@ -44,7 +31,6 @@
                          <Image url="@avatar.png" />
                      </image>
                  </ImageView>
-                 <DatePicker fx:id="enterDate" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="20.0" minWidth="81.0" prefHeight="20.0" prefWidth="168.0" />
                  <HBox fx:id="hboxNomChambre" alignment="CENTER">
                      <children>
                          <TextField fx:id="enterNom" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="20.0" minWidth="81.0" prefHeight="28.0" prefWidth="162.0" promptText="Nom" style="-fx-border-color: Orange;" />
@@ -73,11 +59,11 @@
                      </children>
                  </HBox>
                  <TextField fx:id="enterComment" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="20.0" minWidth="81.0" prefHeight="28.0" prefWidth="168.0" promptText="Comment" />
-                 <Button minHeight="20.0" minWidth="81.0" onAction="#addToListView" prefHeight="28.0" prefWidth="168.0" text="Ajouter" textOverrun="CLIP">
+                 <Button minHeight="20.0" minWidth="81.0" onAction="#addToListView" prefHeight="28.0" prefWidth="168.0" text="Supprimer" textFill="RED" textOverrun="CLIP">
                      <font>
                          <Font size="10.0" />
                      </font></Button>
-                 <Text fill="#00abf5" strokeType="OUTSIDE" strokeWidth="0.0" text="Lundi" textAlignment="CENTER" />
+                 <Text fx:id="lundi" fill="#00abf5" strokeType="OUTSIDE" strokeWidth="0.0" text="Lundi" textAlignment="CENTER" />
                  <GridPane.margin>
                      <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                  </GridPane.margin>
@@ -88,7 +74,6 @@
                          <Image url="@avatar.png" />
                      </image>
                  </ImageView>
-                 <DatePicker fx:id="enterDate1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="20.0" minWidth="81.0" prefHeight="28.0" prefWidth="162.0" />
                  <HBox fx:id="hboxNomChambre1" alignment="CENTER">
                      <children>
                          <TextField fx:id="enterNom1" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="20.0" minWidth="81.0" prefHeight="28.0" prefWidth="162.0" promptText="Nom" style="-fx-border-color: Orange;" />
@@ -117,11 +102,11 @@
                      </children>
                  </HBox>
                  <TextField fx:id="enterComment1" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="20.0" minWidth="81.0" prefHeight="28.0" prefWidth="168.0" promptText="Comment" />
-                 <Button minHeight="20.0" minWidth="81.0" onAction="#addToListView" prefHeight="28.0" prefWidth="168.0" text="Ajouter" textOverrun="CLIP">
+                 <Button minHeight="20.0" minWidth="81.0" onAction="#addToListView" prefHeight="28.0" prefWidth="168.0" text="Supprimer" textFill="RED" textOverrun="CLIP">
                      <font>
                          <Font size="10.0" />
                      </font></Button>
-                 <Text fill="#00abf5" strokeType="OUTSIDE" strokeWidth="0.0" text="Mardi" textAlignment="CENTER" />
+                 <Text fx:id="mardi" fill="#00abf5" strokeType="OUTSIDE" strokeWidth="0.0" text="Mardi" textAlignment="CENTER" />
                  <GridPane.margin>
                      <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                  </GridPane.margin>
@@ -132,7 +117,6 @@
                          <Image url="@avatar.png" />
                      </image>
                  </ImageView>
-                 <DatePicker fx:id="enterDate2" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="20.0" minWidth="81.0" prefHeight="28.0" prefWidth="168.0" />
                  <HBox fx:id="hboxNomChambre2" alignment="CENTER">
                      <children>
                          <TextField fx:id="enterNom2" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="20.0" minWidth="81.0" prefHeight="28.0" prefWidth="162.0" promptText="Nom" style="-fx-border-color: Orange;" />
@@ -161,11 +145,11 @@
                      </children>
                  </HBox>
                  <TextField fx:id="enterComment2" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="20.0" minWidth="81.0" prefHeight="28.0" prefWidth="168.0" promptText="Comment" />
-                 <Button minHeight="20.0" minWidth="81.0" onAction="#addToListView" prefHeight="28.0" prefWidth="168.0" text="Ajouter" textOverrun="CLIP">
+                 <Button minHeight="20.0" minWidth="81.0" onAction="#addToListView" prefHeight="28.0" prefWidth="168.0" text="Supprimer" textFill="RED" textOverrun="CLIP">
                      <font>
                          <Font size="10.0" />
                      </font></Button>
-                 <Text fill="#00abf5" strokeType="OUTSIDE" strokeWidth="0.0" text="Mercredi" textAlignment="CENTER" />
+                 <Text fx:id="mercredi" fill="#00abf5" strokeType="OUTSIDE" strokeWidth="0.0" text="Mercredi" textAlignment="CENTER" />
                  <GridPane.margin>
                      <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                  </GridPane.margin>
@@ -176,7 +160,6 @@
                          <Image url="@avatar.png" />
                      </image>
                  </ImageView>
-                 <DatePicker fx:id="enterDate3" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="20.0" minWidth="81.0" prefHeight="28.0" prefWidth="162.0" />
                  <HBox fx:id="hboxNomChambre3" alignment="CENTER">
                      <children>
                          <TextField fx:id="enterNom3" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="20.0" minWidth="81.0" prefHeight="28.0" prefWidth="162.0" promptText="Nom" style="-fx-border-color: Orange;" />
@@ -205,11 +188,11 @@
                      </children>
                  </HBox>
                  <TextField fx:id="enterComment3" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="20.0" minWidth="81.0" prefHeight="28.0" prefWidth="168.0" promptText="Comment" />
-                 <Button minHeight="20.0" minWidth="81.0" onAction="#addToListView" prefHeight="28.0" prefWidth="168.0" text="Ajouter" textOverrun="CLIP">
+                 <Button minHeight="20.0" minWidth="81.0" onAction="#addToListView" prefHeight="28.0" prefWidth="168.0" text="Supprimer" textFill="RED" textOverrun="CLIP">
                      <font>
                          <Font size="10.0" />
                      </font></Button>
-                 <Text fill="#00abf5" strokeType="OUTSIDE" strokeWidth="0.0" text="Jeudi" textAlignment="CENTER" />
+                 <Text fx:id="jeudi" fill="#00abf5" strokeType="OUTSIDE" strokeWidth="0.0" text="Jeudi" textAlignment="CENTER" />
                  <GridPane.margin>
                      <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                  </GridPane.margin>
@@ -220,7 +203,6 @@
                          <Image url="@avatar.png" />
                      </image>
                  </ImageView>
-                 <DatePicker fx:id="enterDate4" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="20.0" minWidth="81.0" prefHeight="28.0" prefWidth="162.0" />
                  <HBox fx:id="hboxNomChambre4" alignment="CENTER">
                      <children>
                          <TextField fx:id="enterNom4" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="20.0" minWidth="81.0" prefHeight="28.0" prefWidth="162.0" promptText="Nom" style="-fx-border-color: Orange;" />
@@ -249,11 +231,11 @@
                      </children>
                  </HBox>
                  <TextField fx:id="enterComment4" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="20.0" minWidth="81.0" prefHeight="28.0" prefWidth="168.0" promptText="Comment" />
-                 <Button minHeight="20.0" minWidth="81.0" onAction="#addToListView" prefHeight="28.0" prefWidth="168.0" text="Ajouter" textOverrun="CLIP">
+                 <Button minHeight="20.0" minWidth="81.0" onAction="#addToListView" prefHeight="28.0" prefWidth="168.0" text="Supprimer" textFill="RED" textOverrun="CLIP">
                      <font>
                          <Font size="10.0" />
                      </font></Button>
-                 <Text fill="#00abf5" strokeType="OUTSIDE" strokeWidth="0.0" text="Vendredi" textAlignment="CENTER" />
+                 <Text fx:id="vendredi" fill="#00abf5" strokeType="OUTSIDE" strokeWidth="0.0" text="Vendredi" textAlignment="CENTER" />
                  <GridPane.margin>
                      <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                  </GridPane.margin>
@@ -264,7 +246,6 @@
                      <Image url="@avatar.png" />
                  </image>
              </ImageView>
-             <DatePicker fx:id="enterDate5" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="20.0" minWidth="81.0" prefHeight="28.0" prefWidth="168.0" />
              <HBox fx:id="hboxNomChambre5" alignment="CENTER">
                  <children>
                      <TextField fx:id="enterNom5" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="20.0" minWidth="81.0" prefHeight="28.0" prefWidth="162.0" promptText="Nom" style="-fx-border-color: Orange;" />
@@ -293,11 +274,11 @@
                  </children>
              </HBox>
              <TextField fx:id="enterComment5" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="20.0" minWidth="81.0" prefHeight="28.0" prefWidth="168.0" promptText="Comment" />
-             <Button minHeight="20.0" minWidth="81.0" onAction="#addToListView" prefHeight="28.0" prefWidth="168.0" text="Ajouter" textOverrun="CLIP">
+             <Button minHeight="20.0" minWidth="81.0" onAction="#addToListView" prefHeight="28.0" prefWidth="168.0" text="Supprimer" textFill="RED" textOverrun="CLIP">
                  <font>
                      <Font size="10.0" />
                  </font></Button>
-             <Text fill="#00abf5" strokeType="OUTSIDE" strokeWidth="0.0" text="Samedi" textAlignment="CENTER" />
+             <Text fx:id="samedi" fill="#00abf5" strokeType="OUTSIDE" strokeWidth="0.0" text="Samedi" textAlignment="CENTER" />
              <GridPane.margin>
                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
              </GridPane.margin>
@@ -308,7 +289,6 @@
                          <Image url="@avatar.png" />
                      </image>
                  </ImageView>
-                 <DatePicker fx:id="enterDate6" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="20.0" minWidth="81.0" prefHeight="28.0" prefWidth="162.0" />
                  <HBox fx:id="hboxNomChambre6" alignment="CENTER">
                      <children>
                          <TextField fx:id="enterNom6" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="20.0" minWidth="81.0" prefHeight="28.0" prefWidth="162.0" promptText="Nom" style="-fx-border-color: Orange;" />
@@ -337,11 +317,11 @@
                      </children>
                  </HBox>
                  <TextField fx:id="enterComment6" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="20.0" minWidth="81.0" prefHeight="28.0" prefWidth="168.0" promptText="Comment" />
-                 <Button minHeight="20.0" minWidth="81.0" onAction="#addToListView" prefHeight="28.0" prefWidth="168.0" text="Ajouter" textOverrun="CLIP">
+                 <Button minHeight="20.0" minWidth="81.0" onAction="#addToListView" prefHeight="28.0" prefWidth="168.0" text="Supprimer" textFill="RED" textOverrun="CLIP">
                   <font>
                      <Font size="10.0" />
                   </font></Button>
-               <Text fill="#00abf5" strokeType="OUTSIDE" strokeWidth="0.0" text="Dimanche" textAlignment="CENTER" />
+               <Text fx:id="dimanche" fill="#00abf5" strokeType="OUTSIDE" strokeWidth="0.0" text="Dimanche" textAlignment="CENTER" />
                <GridPane.margin>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </GridPane.margin>
@@ -357,15 +337,9 @@
            <cursor>
                <Cursor fx:constant="CLOSED_HAND" />
            </cursor>
-           <Menu mnemonicParsing="false" text="File">
-               <MenuItem fx:id="toPDF" mnemonicParsing="false" onAction="#toPDF" text="PDF" />
-           </Menu>
-           <Menu mnemonicParsing="false" text="Edit">
-               <MenuItem mnemonicParsing="false" text="Delete" />
-           </Menu>
-           <Menu mnemonicParsing="false" text="Help">
-               <MenuItem mnemonicParsing="false" text="About" />
-           </Menu>
+           <Menu fx:id="toPDF" mnemonicParsing="false" onAction="#toPDF" text="PDF" />
+           <Menu mnemonicParsing="false" text="Imprimer" />
+           <Menu mnemonicParsing="false" text="Mode un ticket"/>
        </MenuBar>
    </top>
    <left>
